MDEV-5106: Server crashes in Explain_union::print_explain on ER_TOO_BIG_SELECT - Don't save UNION's EXPLAIN data if optimization failed with   an error. We could end up saving incomplete plan, which will   cause a crash when we attempt to print it.